[gd_scene load_steps=7 format=3 uid="uid://bigwqi3b8gw01"]

[ext_resource type="Script" path="res://src/Minigame logic/draganddrop.gd" id="1_6mhvs"]
[ext_resource type="Texture2D" uid="uid://ba7ateun8d7j4" path="res://icon.svg" id="1_rpym8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j61d"]
size = Vector2(14, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_48ufb"]
radius = 75.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ai6uo"]
radius = 90.0222

[sub_resource type="CircleShape2D" id="CircleShape2D_b077n"]
radius = 18.0278

[node name="movable Ware" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_6mhvs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rpym8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -1.5)
shape = SubResource("RectangleShape2D_4j61d")

[node name="draghitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="draghitbox"]
shape = SubResource("CircleShape2D_48ufb")

[node name="scan hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="scan hitbox"]
shape = SubResource("CircleShape2D_ai6uo")

[node name="counter_hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="counter_hitbox"]
shape = SubResource("CircleShape2D_b077n")

[connection signal="input_event" from="draghitbox" to="." method="_on_area_2d_input_event"]
[connection signal="area_entered" from="scan hitbox" to="." method="_on_scan_hitbox_area_entered"]
[connection signal="area_entered" from="counter_hitbox" to="." method="_on_counter_hitbox_area_entered"]
[connection signal="area_exited" from="counter_hitbox" to="." method="_on_counter_hitbox_area_exited"]
